<resources>
    <string name="app_name">Calculadora Areas</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="inicio">Ingrese las Medidas</string>
    <string name="lado1">Lado 1 Rectángulo, cuadrado</string>
    <string name="lado2">Lado 2 rectángulo</string>
    <string name="radio">Radio del Circulo</string>
    <string name="base">Base del Triángulo</string>
    <string name="altura">Altura del Triángulo</string>
    <string name="cuadrado">Cuadrado</string>
    <string name="rectangulo">Rectángulo</string>
    <string name="circulo">Círculo</string>
    <string name="triangulo">Triangulo</string>
    <string name="boton">CALCULAR</string>
    <string name="resultado">resultado</string>
    <string name="operaciones">Operaciones</string>
</resources>
